<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.supersub.noamm_000.tincherfirsttry.RegisterActivity"
    android:background="@mipmap/noam2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_titlesHolder"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tv_supersub"
                android:id="@+id/textView"
                android:layout_marginTop="26dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffffff"
                android:paddingBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tv_register"
                android:id="@+id/textView2"
                android:textColor="#ffffffff"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="null"
                android:id="@+id/textView3"
                android:layout_marginTop="27dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#ffffffff"
                android:paddingBottom="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_radioGroupHolder">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:id="@+id/activity_login_rg_userType">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="מורה מחליף"
                    android:id="@+id/rb_teacher"
                    android:checked="true"
                    android:textColor="#ffffffff" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="מנהל"
                    android:id="@+id/rb_manager"
                    android:checked="false"
                    android:textColor="#ffffffff" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_allDetailsHolder"
            android:paddingBottom="30dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#b500ffee">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_firstName"
                android:layout_gravity="right"
                android:hint="@string/et_firstName"
                android:paddingBottom="10dp"
                android:textColor="#ffffffff" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastNameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#B500FFEE">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_lastName"
                android:layout_gravity="right"
                android:hint="שם משפחה:"
                android:paddingBottom="10dp"
                android:textColor="#ffffffff" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userNameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#B500FFEE">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_pr_et_userName"
                android:layout_gravity="right"
                android:paddingBottom="10dp"
                android:hint="שם משתמש:"
                android:textColor="#ffffffff" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#B500FFEE">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/activity_pr_et_password"
                android:layout_gravity="right"
                android:paddingBottom="10dp"
                android:hint="סיסמא:"
                android:textColor="#ffffffff" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="null"
            android:id="@+id/btn_continueRegister"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.18"
            android:textSize="25dp"
            android:paddingTop="10dp" />

    </LinearLayout>
</RelativeLayout>
